--- a/index.ipynb
+++ b/index.ipynb
@@ -713,7 +713,9 @@
    "metadata": {},
    "source": [
     "# Alternate Hypothesis: Discount increases order quantity\n",
-    "HA: x_bar > 21.715261"
+    "HA: x_bar > 21.715261\n",
+    "\n",
+    "We will be running a one sided test. "
    ]
   },
   {
@@ -3952,7 +3954,9 @@
     "\n",
     "\n",
     "# HA: Units in stock has an impact on Units in order\n",
-    "* mu != X_bar"
+    "* mu != X_bar\n",
+    "\n",
+    "Two Sided test"
    ]
   },
   {
@@ -4836,7 +4840,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Does Reorder Level Impact UnitsInOrder?"
+    "# Does Reorder Level Impact UnitsInOrder?\n",
+    "# H0: Reorder Level does not increase Units In Order \n",
+    "# HA: Reorder Level increases Units in Order\n",
+    "We will be running a one sided test. "
    ]
   },
   {
